--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
 .none { display: none; }
 
 .display { display: block; }
+
+.buttons { display: none;
+            margin-top: 30px;
+}
+
+#btn0, #btn1, #btn2, #btn3 {
+    width: 250px;
+    font-size: 20px;
+    padding: 10px 10px;
+}
