--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,27 @@
 }
 
 #btn0, #btn1, #btn2, #btn3 {
-    min-width: 260px;
+    min-width: 275px;
     width: auto;
     font-size: 16px;
+    font-weight: bold;
     height:auto;
     min-height: 50px;
     margin-bottom: 5px;
     margin-right: 5px;
+    border-radius: 50px;
+    border: 1px solid black;
+    background-color: lightskyblue;
+    color: white;
+}
+
+#btn0:hover, #btn1:hover, #btn2:hover, #btn3:hover, #tryagain:hover, #start button:hover {
+    cursor: pointer;
+    background-color: #57636e;
+}
+
+#btn0:focus, #btn1:focus, #btn2:focus, #btn3:focus, #tryagain:focus, #start:hover {
+    outline: 0;
 }
 
 #start {
@@ -28,24 +42,33 @@
         height: 50px;
         font-size: 20px;
         font-weight: bolder;
+        background-color: lightskyblue;
+        border-radius: 25px;
+
+}
+
+#question {
+    font-size: 20px;
 }
 
 #quiz {
     text-align: center;
     width: 600px;
-    height: 300px;
+    height: 350px;
     border-radius: 50px;
     border: 2px solid black;
     margin: 0 auto;
+    margin-top: 50px;
     padding: 10px;
+    background-color: #E5E4E2;
 }
 
 #progress, #question {
     font-weight: bold;
 }
 
-p { max-width: 400px;
-    word-wrap: wrap;
+p { max-width: 450px;
+    min-width: auto;
     text-align: center;
     margin-left: 100px;
     font-family: Arial, Helvetica, sans-serif;
@@ -57,4 +80,8 @@ p { max-width: 400px;
     height: 50px;
     font-size: 20px;
     font-weight: bold;
-}
+    background-color: lightskyblue;
+    border-radius: 25px;
+}   
+
+
